# calultr

./: CMakeLists.txt  build.bat
include/calultr/: program.cpp  program.hpp
src/: main.cpp  program.cpp
